@@ -22,9 +22,9 @@
 package de.ibapl.jnhw.common.downcall;
 
 import de.ibapl.jnhw.common.datatypes.Pointer;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.ValueLayout;
-import jdk.incubator.foreign.FunctionDescriptor;
+import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.ValueLayout;
+import java.lang.foreign.FunctionDescriptor;
 import de.ibapl.jnhw.common.util.ConversionsNative2Java;
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMh__B___A__A_uI;
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMh__B___A__A_uL;
