@@ -23,9 +23,9 @@ package de.ibapl.jnhw.common.downcall;
 
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMh_sI__sI;
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMh_sI__uI;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.ValueLayout;
 
 /**
  *
