@@ -22,12 +22,12 @@
 package de.ibapl.jnhw.common.downcall;
 
 import de.ibapl.jnhw.common.datatypes.Pointer;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.ValueLayout;
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMh_sI__sI_uL__A;
-import jdk.incubator.foreign.Addressable;
+import java.lang.foreign.Addressable;
 
 /**
  *
