@@ -24,8 +24,8 @@ package de.ibapl.jnhw.common.memory;
 
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 /**
  *
@@ -33,8 +33,8 @@ import jdk.incubator.foreign.ResourceScope;
  */
 public class AsSignedLong extends NativeIntNumber {
 
-    public static AsSignedLong allocateNative(BaseDataType nativeType, ResourceScope rs) {
-        return new AsSignedLong(nativeType, MemorySegment.allocateNative(nativeType.SIZE_OF, rs), 0);
+    public static AsSignedLong allocateNative(BaseDataType nativeType, MemorySession ms) {
+        return new AsSignedLong(nativeType, MemorySegment.allocateNative(nativeType.SIZE_OF, ms), 0);
     }
 
     private final BaseDataType dataType;
