@@ -24,8 +24,8 @@ package de.ibapl.jnhw.common.memory;
 import de.ibapl.jnhw.common.annotation.int16_t;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 /**
  *
@@ -36,8 +36,8 @@ public class Int16_t extends NativeIntNumber<Short> {
 
     public final static BaseDataType DATA_TYPE = BaseDataType.int16_t;
 
-    public static Int16_t allocateNative(ResourceScope rs) {
-        return new Int16_t(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, rs), 0);
+    public static Int16_t allocateNative(MemorySession ms) {
+        return new Int16_t(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, ms), 0);
     }
 
     public Int16_t(MemorySegment memorySegment, long offset) {
