@@ -23,8 +23,8 @@ package de.ibapl.jnhw.common.memory;
 
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import java.io.IOException;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 /**
  * teh datatype signed long
@@ -35,8 +35,8 @@ public class Signed_Long extends NativeIntNumber {
 
     public final static BaseDataType DATA_TYPE = BaseDataType.C_long;
 
-    public static Signed_Long allocateNative(ResourceScope rs) {
-        return new Signed_Long(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, rs), 0);
+    public static Signed_Long allocateNative(MemorySession ms) {
+        return new Signed_Long(MemorySegment.allocateNative(DATA_TYPE.SIZE_OF, ms), 0);
     }
 
     public Signed_Long(MemorySegment memorySegment, long offset) {
