@@ -23,10 +23,10 @@ package de.ibapl.jnhw.common.test.memory;
 
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.AsUnsignedInt;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import org.junit.jupiter.api.Test;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Test;
 
 /**
  *
@@ -36,12 +36,12 @@ public class AsUnsignedIntTest {
 
     @Test
     public void testNative() {
-        try ( ResourceScope rs = ResourceScope.newConfinedScope()) {
-            AsUnsignedInt instance = AsUnsignedInt.allocateNative(BaseDataType.uint16_t, rs);
+        try ( MemorySession ms = MemorySession.openConfined()) {
+            AsUnsignedInt instance = AsUnsignedInt.allocateNative(BaseDataType.uint16_t, ms);
             instance.setFromUnsignedInt(33);
             assertEquals(33, instance.getAsUnsignedInt());
             assertThrows(IllegalArgumentException.class, () -> instance.setFromUnsignedInt(-1));
-            assertThrows(IllegalArgumentException.class, () -> new AsUnsignedInt(BaseDataType.int8_t, MemorySegment.allocateNative(BaseDataType.uint8_t.SIZE_OF, rs), 0));
+            assertThrows(IllegalArgumentException.class, () -> new AsUnsignedInt(BaseDataType.int8_t, MemorySegment.allocateNative(BaseDataType.uint8_t.SIZE_OF, ms), 0));
         }
     }
 
