@@ -24,8 +24,8 @@ package de.ibapl.jnhw.common.test.memory;
 import de.ibapl.jnhw.common.datatypes.BaseDataType;
 import de.ibapl.jnhw.common.memory.Int16_t;
 import de.ibapl.jnhw.common.memory.layout.Alignment;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Test;
 
@@ -56,8 +56,8 @@ public class Int16_tTest {
      */
     @Test
     public void testRawInt16_t() {
-        try ( ResourceScope rs = ResourceScope.newConfinedScope()) {
-            Int16_t instance = Int16_t.allocateNative(rs);
+        try ( MemorySession ms = MemorySession.openConfined()) {
+            Int16_t instance = Int16_t.allocateNative(ms);
             short expResult = 0x2010;
             instance.int16_t(expResult);
             assertEquals(expResult, instance.int16_t());
@@ -66,8 +66,8 @@ public class Int16_tTest {
 
     @Test
     public void testNativeToString() {
-        try ( ResourceScope rs = ResourceScope.newConfinedScope()) {
-            Int16_t instance = new Int16_t(MemorySegment.allocateNative(BaseDataType.int16_t.SIZE_OF, rs), 0);
+        try ( MemorySession ms = MemorySession.openConfined()) {
+            Int16_t instance = new Int16_t(MemorySegment.allocateNative(BaseDataType.int16_t.SIZE_OF, ms), 0);
             instance.int16_t((short) -2);
             assertEquals("-2", instance.nativeToString());
             assertEquals("0xfffe", instance.nativeToHexString());
