@@ -26,9 +26,9 @@ import de.ibapl.jnhw.common.downcall.JnhwMethodInvoker;
 import de.ibapl.jnhw.common.memory.OpaqueMemory;
 import de.ibapl.jnhw.common.downcall.wrapper.JnhwMethodHandle;
 import de.ibapl.jnhw.posix.Pthread;
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.SymbolLookup;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.SymbolLookup;
+import java.lang.foreign.ValueLayout;
 
 /**
  *
@@ -71,7 +71,7 @@ public interface JnhwMethodHandle_Sint_PthreadT_PthreadT extends JnhwMethodHandl
     }
 
     static JnhwMethodHandle_Sint_PthreadT_PthreadT of(String name, BaseDataType result, BaseDataType arg1, BaseDataType arg2) {
-        return of(C_LINKER, name, result, arg1, arg2);
+        return of(NATIVE_LINKER.defaultLookup(), name, result, arg1, arg2);
     }
 
     static JnhwMethodHandle_Sint_PthreadT_PthreadT of(SymbolLookup symbolLookup, String name, BaseDataType result, BaseDataType arg1, BaseDataType arg2) {
